syntax = "proto3";

package com.libong.forShare.service.record;

option go_package = "./;api";

import "google/protobuf/empty.proto";

service RecordService{

  /*-----------------记录-----------------*/
  //添加记录
  rpc addRecord(AddRecordReq)returns(AddRecordResp){}
  //修改记录
  rpc updateRecord(UpdateRecordReq)returns(google.protobuf.Empty){}
  //删除记录
  rpc deleteRecord(DeleteRecordReq)returns(google.protobuf.Empty){}
  //记录详情
  rpc recordByID(RecordByIDReq)returns(RecordByIDResp){}
  //分页查询
  rpc searchRecordsPage(SearchRecordsPageReq)returns(SearchRecordsPageResp){}
  //查询记录总数
  rpc countRecord(CountRecordReq)returns(CountRecordResp){}

  /*-----------------记录分类-----------------*/
  //批量添加记录分类
  rpc batchAddRecordCategories(BatchAddRecordCategoriesReq)returns(google.protobuf.Empty){}
  //批量删除记录分类
  rpc batchDeleteRecordCategories(BatchDeleteRecordCategoriesReq)returns(google.protobuf.Empty){}
  //查询记录分类
  rpc searchRecordCategories(SearchRecordCategoriesReq)returns(SearchRecordCategoriesResp){}
}
message AddRecordReq{
  string good_name = 2; //物品名称
  uint32 status = 3; //记录状态 1使用中 2历史
  int64 buy_at = 4; //购买时间
  int64 product_at = 5; //生产日期
  int64 overdue_at = 6; //过期时间
  uint32 star_level = 7; //星级
  string picture = 8; //图片
  string comment = 9; //评价
}
message AddRecordResp{
  string id = 1;
}
message UpdateRecordReq{
  string record_id = 1; //记录编号
  string good_name = 2; //物品名称
  uint32 status = 3; //记录状态 1使用中 2历史
  int64 buy_at = 4; //购买时间
  int64 product_at = 5; //生产日期
  int64 overdue_at = 6; //过期时间
  uint32 star_level = 7; //星级
  string picture = 8; //图片
  string comment = 9; //评价

  bool handle_zero = 90; //是否处理零值 需要在dao层进行判断 为true时只能传可以被设置为零值的字段
  repeated string zero_fields = 91; //要处理的字段json
}
message DeleteRecordReq{
  string id = 1;
}
message RecordByIDReq{
  string id = 1;
}
message RecordByIDResp{
   Record record = 1;
}
message Record{
  string record_id = 1; //记录编号
  string good_name = 2; //物品名称
  uint32 status = 3; //记录状态 1使用中 2历史
  int64 buy_at = 4; //购买时间
  int64 product_at = 5; //生产日期
  int64 overdue_at = 6; //过期时间
  uint32 star_level = 7; //星级
  string picture = 8; //图片
  string comment = 9; //评价
  int64 establish_at = 10; //创建时间
}
message RecordCondition{
  string fuzzy_good_name = 1; //物品名称
  repeated string record_ids = 2;
  uint32 status = 3; //记录状态 1使用中 2历史
  int64 buy_start_at = 4; //购买时间
  int64 buy_end_at = 5; //购买时间
  int64 product_start_at = 6; //生产日期
  int64 product_end_at = 7; //生产日期
  int64 overdue_start_at = 8; //过期时间
  int64 overdue_end_at = 9; //过期时间
  repeated uint32 star_levels = 10; //星级
  int64 establish_start_at = 11; //创建时间
  int64 establish_end_at = 12; //创建时间
}
message SearchRecordsPageReq{
  RecordCondition condition = 1;

  uint32 page_num = 100;
  uint32 page_size = 101;
}
message SearchRecordsPageResp{
  repeated Record list = 1;
}
message CountRecordReq{
  RecordCondition condition = 1;
}
message CountRecordResp{
  int64 total = 1;
}
enum RecordStatus{
    RecordStatusUnknown = 0;
    RecordStatusOnline = 1; //使用中
    RecordStatusHistory = 2; //历史
}
/*-----------------记录分类-----------------*/
message RecordCategory{
  string record_id = 1;
  string category_id = 2;
}
message BatchAddRecordCategoriesReq{
  repeated RecordCategory list = 1;
}
message BatchDeleteRecordCategoriesReq{
  repeated string record_ids = 1;
  repeated string category_ids = 2;
}
message SearchRecordCategoriesReq{
  repeated string record_ids = 1;
  repeated string category_ids = 2;
}
message SearchRecordCategoriesResp{
  repeated RecordCategory list = 1;
}